--- a/FAQ/FAQ.css
+++ b/FAQ/FAQ.css
@@ -1,3 +1,8 @@
+/*-- -------------------------- -->
+<---            FAQ             -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #faq-1720 {
       padding: var(--sectionPadding);
@@ -10,18 +15,18 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
+      /* 48px - 64px */
       gap: clamp(3rem, 6vw, 4rem);
       position: relative;
       z-index: 1;
     }
     #faq-1720 .cs-content {
-
+      /* set text align to left if content needs to be left aligned */
       text-align: left;
       width: 100%;
       display: flex;
       flex-direction: column;
-
+      /* centers content horizontally, set to flex-start to left align */
       align-items: flex-start;
     }
     #faq-1720 .cs-title {
@@ -32,7 +37,7 @@
       overflow: hidden;
       display: flex;
       flex-direction: column;
-
+      /* 16px - 20px */
       gap: clamp(1rem, 2.3vw, 1.25rem);
       position: relative;
     }
@@ -44,14 +49,14 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-
+      /* 16px - 20px */
       gap: clamp(1rem, 2.5vw, 1.25rem);
-
+      /* prevents flexbox from squishing it */
       flex: none;
     }
     #faq-1720 .cs-flex {
       width: 100%;
-
+      /* 24px - 32px */
       padding: clamp(1.5rem, 3vw, 2rem);
       background-color: #F7F7F7;
       display: flex;
@@ -60,7 +65,7 @@
       gap: 1.25rem;
     }
     #faq-1720 .cs-option {
-
+      /* 16px - 20px */
       font-size: clamp(1rem, 2vw, 1.25rem);
       line-height: 1.2em;
       font-weight: 700;
@@ -85,9 +90,9 @@
     }
     #faq-1720 .cs-picture {
       width: 100%;
-
+      /* 328px - 450px */
       height: clamp(20.5rem, 30vw, 28.125rem);
-
+      /* 16px - 20px */
       margin: 0 0 clamp(1rem, 2.4vw, 1.25rem);
       order: 2;
       position: relative;
@@ -116,23 +121,23 @@
                   visibility 0.5s,
                   top 0.3s,
                   left 0.3s;
-
+      /* makes the transfrom scaling orgin the top left corner, dictates the direction by which the scale transforms animate towards */
       transform-origin: top;
       transform-style: preserve-3d;
       perspective: 900px;
     }
     #faq-1720 .cs-faq-group.cs-hidden {
-
+      /* by using visibility:hidden instead of display:none, we can see the animations from the opacity and transforms, display:none won't render animations. */
       visibility: hidden;
-
+      /* prevents the mouse from interacting with it */
       pointer-events: none;
-
+      /* hidden galleries have a 0 opacity, and we animate the opacity to 1 when they become active */
       opacity: 0;
-
+      /* this top and left value help control the animation, by setting it to position absolute and left 0, the FAQ won't fly off screen to the left, it will stop its position to be at the left edge of the .cs-flex-group (left: 0). Same for the bottom:0 value, the FAQ won't go past that position when it animates */
       top: 0;
       left: 0;
       position: absolute;
-
+      /* prevents the hidden galleries from overflowing the section, and makes a nice animations to transition to and from */
       transform: scaleY(0);
     }
     #faq-1720 .cs-faq-group.cs-hidden .cs-faq-item {
@@ -142,7 +147,7 @@
     #faq-1720 .cs-faq-item {
       list-style: none;
       width: 100%;
-
+      /* clips all corners of the button that overlap the rounded border */
       overflow: hidden;
       opacity: 1;
       top: 0;
@@ -190,17 +195,19 @@
     }
     #faq-1720 .cs-faq-item.active .cs-item-p {
       height: auto;
-
+      /* 20px - 24px bottom */
+      /* 16px - 24px left & right */
       padding: 0 clamp(1rem, 2vw, 1.5rem) clamp(1.25rem, 1.3vw, 1.5rem);
       opacity: 1;
     }
     #faq-1720 .cs-button {
-
+      /* 16px - 20px */
       font-size: clamp(1rem, 2vw, 1.25rem);
       line-height: 1.2em;
       text-align: left;
       font-weight: bold;
-
+      /* 16px - 24px top & bottom */
+      /* 16px - 20px left & right */
       padding: clamp(1rem, 2vw, 1.5rem) clamp(1rem, 2vw, 1.25rem);
       background-color: #f7f7f7;
       border: none;
@@ -214,7 +221,7 @@
       cursor: pointer;
     }
     #faq-1720 .cs-button:before {
-
+      /* left line */
       content: "";
       width: 0.5rem;
       height: 0.125rem;
@@ -226,12 +233,12 @@
       top: 50%;
       right: 1.5rem;
       transform: rotate(45deg);
-
+      /* animate the transform from the left side of the x axis, and the center of the y */
       transform-origin: left center;
       transition: transform 0.5s;
     }
     #faq-1720 .cs-button:after {
-
+      /* right line */
       content: "";
       width: 0.5rem;
       height: 0.125rem;
@@ -243,7 +250,7 @@
       top: 50%;
       right: 1.3125rem;
       transform: rotate(-45deg);
-
+      /* animate the transform from the right side of the x axis, and the center of the y */
       transform-origin: right center;
       transition: transform 0.5s;
     }
@@ -252,23 +259,23 @@
       display: block;
     }
     #faq-1720 .cs-item-p {
-
+      /* 14px - 16px */
       font-size: clamp(0.875rem, 1.5vw, 1rem);
       line-height: 1.5em;
       width: 100%;
       height: 0;
       margin: 0;
-
+      /* 16px - 24px */
       padding: 0 clamp(1rem, 2vw, 1.5rem);
       opacity: 0;
       background-color: #f7f7f7;
       color: var(--bodyTextColor);
-
+      /* clips the text so it doesn't show up */
       overflow: hidden;
       transition: opacity 0.3s, padding-bottom 0.3s;
     }
   }
-
+  /* Inbetween - 600px */
   @media only screen and (min-width: 37.5rem) {
     #faq-1720 .cs-button-group {
       width: 80%;
@@ -281,7 +288,7 @@
       width: 100%;
     }
     #faq-1720 .cs-picture {
-
+      /* 300px - 493px */
       min-height: clamp(18.75rem, 30vw, 30.8125rem);
       margin: 0;
       height: 100%;
@@ -289,13 +296,13 @@
       order: 3;
     }
   }
-
+  /* Desktop - 1024px */
   @media only screen and (min-width: 48rem) {
     #faq-1720 .cs-flex-group {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-
+      /* 20px - 80px */
       column-gap: clamp(1.25rem, 3vw, 5rem);
     }
     #faq-1720 .cs-button-group {
@@ -306,3 +313,4 @@
       max-height: 31.25rem;
     }
   }
+                                  
