--- a/Rozklad/Ticket2.css
+++ b/Rozklad/Ticket2.css
@@ -1,3 +1,8 @@
+/*-- -------------------------- -->
+<---        Collection          -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #collection-1602 {
       padding: var(--sectionPadding);
@@ -9,7 +14,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
+      /* 48px - 64px */
       gap: clamp(3rem, 6vw, 4rem);
       position: relative;
       z-index: 1;
@@ -30,7 +35,7 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-
+      /* 16px - 32px */
       gap: clamp(1rem, 4vw, 2rem);
     }
     #collection-1602 .cs-button {
@@ -81,32 +86,32 @@
       display: grid;
       justify-items: center;
       grid-auto-flow: row;
-
+      /* 16px - 20px */
       gap: clamp(1rem, 1.5vw, 1.25rem);
       position: relative;
       transform-style: preserve-3d;
       perspective: 700px;
       transition: transform 0.7s, opacity 0.3s, visibility 0.5s, top 0.3s, left 0.3s;
-
+      /* makes the transform scaling origin the top left corner, dictates the direction by which the scale transforms animate towards */
       transform-origin: left top;
     }
     #collection-1602 .cs-listing.cs-hidden {
-
+      /* hidden galleries have a 0 opacity, and we animate the opacity to 1 when they become active */
       opacity: 0;
-
+      /* by using visibility:hidden instead of display:none, we can see the animations from the opacity and transforms, display:none won't render animations. */
       visibility: hidden;
       position: absolute;
-
+      /* this top and left value help control the animation, by setting it to position absolute and left 0, the gallery won't fly off screen to the left, it will stop its position to be at the left edge of the .cs-container (left: 0). Same for the top:0 value, the gallery won't go past that position when it animates */
       top: 0;
       left: 0;
-
+      /* prevents the hidden galleries from overflowing the section, and makes a nice animations to transition to and from */
       transform: scaleY(0) scaleX(0);
-
+      /* prevents the mouse from interacting with it */
       pointer-events: none;
     }
     #collection-1602 .cs-listing.cs-hidden .cs-image {
       opacity: 0;
-
+      /* when gallery is hidden, add these styles to the cs-image to animate from when cs-hidden is removed from the .cs-gallery */
       transform: translateY(2.1875rem) rotateX(90deg);
     }
     #collection-1602 .cs-listing.cs-hidden .cs-item {
@@ -116,7 +121,7 @@
     #collection-1602 .cs-item {
       width: 100%;
       max-width: 23.4375rem;
-
+      /* overwrites the default 'min-width: auto' value, keeping all grid items the same width no matter what*/
       min-width: 0;
       opacity: 1;
       padding: 1rem;
@@ -182,7 +187,8 @@
     #collection-1602 .cs-picture img {
       width: 100%;
       height: 100%;
-
+      /* using object-fit contain to keep the entirety of the product image in the frame */
+      /* feel free to change this to 'cover', or adjust the background-color above if you have consistent backgrounds on your products */
       object-fit: contain;
       transition: transform 0.6s;
     }
@@ -205,7 +211,7 @@
       color: #767676;
     }
     #collection-1602 .cs-name {
-
+      /* 20px - 25px */
       font-size: clamp(1.25rem, 1vw, 1.5625rem);
       font-weight: 700;
       line-height: 1.2em;
@@ -258,7 +264,7 @@
       height: auto;
     }
   }
-
+  /* Tablet - 768px */
   @media only screen and (min-width: 48rem) {
     #collection-1602 .cs-content {
       flex-direction: row;
@@ -271,7 +277,8 @@
       max-width: none;
     }
     #collection-1602 .cs-picture-group {
-
+      /* 200px - 320px */
       height: clamp(12.5rem, 23vw, 20rem);
     }
   }
+                                  
